# opengl_playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: hello_triangle.frag  hello_triangle.vert  phong_mesh.frag  phong_mesh.vert
shaders/apps/: coordinate_system.frag  coordinate_system.vert
src/: camera.cpp  camera.h  constants.h  delta_time.cpp  delta_time.h  engine.cpp  engine.h  globals.h  input.cpp  input.h  lab.cpp  lab.h  light.h  logging.h  main.cpp  mesh.cpp  mesh.h  object.h  opengl_playground_main.cpp  pch.h  scene.h  shader.cpp  shader.h  shared.h  texture.cpp  texture.h  transform.h
src/app/: app.cpp  app.h
src/app/apps/: coordinate_system.cpp  coordinate_system.h  imgui_resource.cpp  imgui_resource.h  phong_shading.cpp  phong_shading.h  tiny_engine.cpp  tiny_engine.h
src/app/apps/tiny_engine/: object.h  scene.h
src/ecs/: component.h  entity.h  system.cpp  system.h
